client-web/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

.content {
  margin: 10px;
}

html, body, .viewport, #root {
  width: 100%;
  height: 100%;
  margin: 0;
}

button a {
  text-decoration: none;
  color: black;
}

/* encapsulate the various syntax in helper clases */
/* inspired by http://infrequently.org/2009/08/css-3-progress/ */

/* items flex/expand vertically */
.vbox {
  
  /* current syntax */
  display:         flex;

          flex-direction: column;
}

/* items flex/expand horizontally */
.hbox {
  display:         flex;

          flex-direction: row;
}

.space-between {
          justify-content: space-between;
}

/* I went with a fixed height header & footer because it's a common case.
  This could easily be altered to flex proportionally with the page.
*/
.header {
  height: 64px;
}

.footer {
  height: 50px;
}

.main {
              flex: 1;
}

.content {
          flex: 5;
}

